// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkipLink mounts 1`] = `
<div
  class="StyledLayer-ceZzeh gVCohQ"
  id="skip-links"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledContainer-gBGbkw emuypU"
  >
    <div
      class="StyledBox-bStriS kLwTeJ"
      direction="column"
    >
      <h2
        class="StyledHeading-NQveS gRpxyr"
      >
        Skip To
        :
      </h2>
      <div
        class="StyledBox-bStriS bqSFqK"
        direction="row"
      >
        <div
          class="StyledBox-bStriS cvUrkJ"
          direction="column"
        >
          <a
            class="StyledAnchor-hcnTIZ kwSIan"
            label="Main Content"
            href="#main"
          >
            Main Content
          </a>
        </div>
        <div
          class="StyledBox-bStriS cvUrkJ"
          direction="column"
        >
          <a
            class="StyledAnchor-hcnTIZ kwSIan"
            label="Footer"
            href="#footer"
          >
            Footer
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SkipLink mounts 2`] = `
"

.gVCohQ {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  position: relative;
  z-index: 10;
  height: 100vh;
  overflow: auto;
  background-color: rgba(0,0,0,0.5);
  left: -100%;
  right: 100%;
  z-index: -1;
  position: fixed;
}

@media only screen and (max-width:699px) {
  .emuypU {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .emuypU {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
  }
}"
`;

exports[`SkipLink mounts 3`] = `
<div
  class="StyledLayer-ceZzeh bGwGvr"
  id="skip-links"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledContainer-gBGbkw jpmyrr"
  >
    <div
      class="StyledBox-bStriS kLwTeJ"
      direction="column"
    >
      <h2
        class="StyledHeading-NQveS gRpxyr"
      >
        Skip To
        :
      </h2>
      <div
        class="StyledBox-bStriS bqSFqK"
        direction="row"
      >
        <div
          class="StyledBox-bStriS cvUrkJ"
          direction="column"
        >
          <a
            class="StyledAnchor-hcnTIZ gUtwfp"
            label="Main Content"
            href="#main"
          >
            Main Content
          </a>
        </div>
        <div
          class="StyledBox-bStriS cvUrkJ"
          direction="column"
        >
          <a
            class="StyledAnchor-hcnTIZ kwSIan"
            label="Footer"
            href="#footer"
          >
            Footer
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SkipLink mounts 4`] = `
"

.bGwGvr {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  position: relative;
  z-index: 10;
  height: 100vh;
  overflow: auto;
  background-color: rgba(0,0,0,0.5);
}

@media only screen and (min-width:700px) {
  .bGwGvr {
    position: fixed;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
  }
}

@media only screen and (max-width:699px) {
  .emuypU {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .emuypU {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
  }
}

@media only screen and (max-width:699px) {
  .jpmyrr {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .jpmyrr {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    left: 50%;
    -webkit-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    transform: translateX(-50%);
    -webkit-animation: fVNlMJ 0.2s ease-in-out forwards;
    animation: fVNlMJ 0.2s ease-in-out forwards;
  }
}"
`;

exports[`SkipLink mounts 5`] = `
<body
  style="overflow: scroll;"
>
  <div>
    <div
      hidden=""
    >
      <div
        class="StyledLayer-ceZzeh gVCohQ"
        id="skip-links"
        tabindex="-1"
      >
        <div
          class="StyledLayer__StyledContainer-gBGbkw emuypU"
        >
          <div
            class="StyledBox-bStriS kLwTeJ"
            direction="column"
          >
            <h2
              class="StyledHeading-NQveS gRpxyr"
            >
              Skip To
              :
            </h2>
            <div
              class="StyledBox-bStriS bqSFqK"
              direction="row"
            >
              <div
                class="StyledBox-bStriS cvUrkJ"
                direction="column"
              >
                <a
                  class="StyledAnchor-hcnTIZ kwSIan"
                  label="Main Content"
                  href="#main"
                >
                  Main Content
                </a>
              </div>
              <div
                class="StyledBox-bStriS cvUrkJ"
                direction="column"
              >
                <a
                  class="StyledAnchor-hcnTIZ kwSIan"
                  label="Footer"
                  href="#footer"
                >
                  Footer
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="false"
  />
</body>
`;
